--- a/views/studentdeatils.ejs
+++ b/views/studentdeatils.ejs
@@ -15,6 +15,7 @@
                     <th>Father Name</th>
                     <th>Adhar Card</th>
                     <th>Mobile No</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <%students.forEach((student)=>{ %>
@@ -25,6 +26,11 @@
                 <td><%=student.fatherName%></td>
                 <td><%=student.adharCardNo%></td>
                 <td><%=student.mobileNo%></td>
+                <td><a href="/student/edit/page/<%= student._id %>"
+                        class="btn btn-warning w-45">Edit</a>
+                    <a href="/delete/student/<%= student._id %>"
+                        class="btn btn-danger w-65">Delete</a>
+                </td>
             </tr>
             <% })%>
         </table>
